--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Notes Page</string>
     <string name="submit">Submit</string>
     <string name="enter_new_note">Enter New Note</string>
+    <string name="application_name">Digital Page</string>
 </resources>
